# italo-network

./: .dockerignore  .drone.jsonnet  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  italonet-docker.ini  lokinet-bootstrap  lokinet-bootstrap.ps1  module.modulemap  readme.md  readme_es.md  readme_ru.md  run-lokinet.bat
.github/ISSUE_TEMPLATE/: bug_report.md
android/: AndroidManifest.xml  build.gradle  build.xml  readme.md  settings.gradle
cmake/: GenVersion.cmake  installer.cmake  macos_installer_deps.cmake  shadow.cmake  win32_installer_deps.cmake
contrib/: hex-to-base32z.py  italonet-resolvconf  readme-installer.txt  tarball.sh
contrib/apparmor/: usr.bin.lokinet
crypto/: CMakeLists.txt
daemon/: CMakeLists.txt  italonetctl.cpp  lokinet-vpn.cpp  main.cpp
debian/: changelog  control  copyright  italonet-bootstrap.1  italonet.install  italonet.manpages  loki-service-nodes.7  lokinet.1  lokinet.lokinet-vpn.service  lokinet.service  postinst
docker/: italo-svc-kubernetes.Dockerfile  router.Dockerfile
docs/: CMakeLists.txt  Doxyfile.in  README  api_v0.txt  code_structure.org  conf.py.in  exit-setup.md  high-level.txt  index.rst  linux-setcap-readme.txt  lokinet_admin_v0.txt  proto_v0.txt  snap-config-options.md
docs/spanish/: README  (+1 more)
include/: llarp.h
jni/: CMakeLists.txt  italonet_daemon.cpp  italonet_jni_common.hpp  italonet_vpn.cpp  lokinet_config.cpp  lokinet_jni_vpnio.hpp  network_italo_italonet_ItalonetConfig.h  network_italo_italonet_ItalonetVPN.h  network_italo_italonet_Italonet_JNI.h  network_loki_lokinet_LokinetDaemon.h  network_loki_lokinet_LokinetVPN_VPNInfo.h
llarp/: CMakeLists.txt  nodedb.cpp  router_contact.cpp  router_contact.hpp  router_id.cpp  testnet.c
pybind/: CMakeLists.txt
test/: CMakeLists.txt
win32-setup/: Makefile  config_migration.bat  italonet-win32.iss  notes.txt  regdb_helper.c
(+123 files in other folders)
